# Roommate

./: CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  GITHUB_SETUP.md  QUICKSTART.md  README.md  SECURITY.md  SETUP.md  SIGNALING_SETUP.md  docker-compose.yml  generate-roo-icon.js  index.html  launch1.bat  launch2.bat  launch3.bat  launch4.bat  package-lock.json  package.json
.github/workflows/: docker-build.yml
deploy/: DOCKGE_SETUP.md  README.md  docker-compose.yml  install.sh
signaling-server/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.prebuilt  entrypoint.sh  tmpclaude-71ff-cwd
signaling-server/src/: main.rs
signaling-server/src/handlers/: db.rs  http.rs  message.rs
signaling-server/src/state/: backends.rs  events.rs  mod.rs  presence.rs  profiles.rs  signaling.rs  voice.rs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: account_manager.rs  audio_settings.rs  file_association.rs  house.rs  identity.rs  main.rs  server.rs  signaling.rs
src/components/: AppUpdater.tsx  AvatarCropModal.tsx  HouseSyncBootstrap.tsx  ProfileAvatarChip.tsx  ServerSyncBootstrap.tsx  SignalingStatus.tsx  TitleBar.tsx  UserCard.tsx  UserProfileCard.tsx
src/contexts/: AccountContext.tsx  ActiveHouseContext.tsx  ActiveServerContext.tsx  HousesContext.tsx  IdentityContext.tsx  PresenceContext.tsx  ProfileContext.tsx  RemoteProfilesContext.tsx  ServersContext.tsx  SidebarWidthContext.tsx  SignalingContext.tsx  WebRTCContext.tsx
src/lib/: audio.ts  event-sync.ts  imageCrop.ts  natOverride.ts  remoteAudioAnalyzer.ts  tauri.ts  (+1 more)
(+14 files in other folders)
